# tex2typst-webapp

./: .gitignore  LICENSE  README.md  TODO.md  cheat-sheet.html  impl-in-typst.html  index.html  justfile  main.css  main.js  main2.js  offline.html  package-lock.json  package.json  run-server.js  save-html.js  server.js  style.css  svelte.config.js  sw.js  tailwind.config.js  vite.config.js
.github/workflows/: github-pages.yml
assets/: app-BB5rjhzS.css  app-BTok4BKO.css  app-BhnUpJAR.js  app-C7WXZDlL.css  app-CVCZNU8Z.js  app-Ce0z4bgT.js  app-D0DV0aGU.js  app-D2NmQeqJ.js  app-D3B6eSJ_.js  app-DmPjjr3i.js  app-DmiDX2f2.js  app-Rhjrla_l.js  app-kljTsZqy.js  index-CX84MKpq.css  index-hm_WcFO3.js
public/: cheat-sheet.html  impl-in-typst.html  manifest.json  sitemap.xml  sw.js
src/: App.svelte  App.vue  CopiedToast.vue  clipboard.js  converter.js  default-settings.js  entry-client.js  entry-server.js  main-csr.js  main.js  random.js  settings.js  setup-sw.ts  sw.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css  style.css
src/components/: CopiedToast.svelte  CopiedToast.vue  SettingsDialog.svelte  SettingsDialog.vue  ToggleSwitch.svelte  ToggleSwitch.vue
src/template/: cheat-sheet.toml  cheat-sheet.tp.html  impl-in-typst.md  markdown-wrapper.html
test/: converter.test.js
tests/: converter.test.js
tools/: build.sh  make-cheat-sheet-html.js  make-impl-in-typst-html.js  make_icon.py  tex-to-svg.cjs
